test/error/rtc/con1.rzy
// error: loop in connection graph for sub

component
  Dummy
    input
      inp();
      
    output
      out();
      
  implementation elementary
    function inp()
      out();
    end
  end

  Con1
    input
      inp();
      
    output
      out();
      
  implementation composition
    component
      sub : Dummy;
      
    connection
      inp -> out;
      sub.out -> sub.inp;

  end

